<resources>
    <string name="app_name">ButtonAndSimilarClickableWidgets</string>
    <string name="show_buttons_button_label"></string>
    <string name="show_spinner_button_label"></string>
    <string name="hi_label">Hi!</string>
    <string name="bye_label">Bye!</string>
    <string name="yo_label">Yo!</string>
    <string name="button_message_template">You click the \'%s\' Widget/string</string>
    <string name="image_button_message_template">You click the ImageButton that display %s.</string>
    <string name="image_button_1_image">the android_platform.png</string>
    <string name="image_button_2_image">the camera_phone.png image</string>
    <string name="image_button_3_image">the gps.png image</string>
    <string name="image_button_4_image">the Drawable defined in button_android.xml</string>
    <string name="image_button_5_image">the Drawable defined in button_dialog.xml</string>
    <string name="image_button_6_image">the Drawable defined in button_rating_star.xml</string>
    <string name="new_selection_message_template">You selected the \'%s\' RadioButton. There was no previous selection.</string>
    <string name="changed_selection_message_template" formatted="false">You selected the \'%s\' RadioButton.Previous selection was \'%s\'.</string>
    <string name="ssl_toggle_on">Use SSL</string>
    <string name="ssl_toggle_off">No SSL</string>
    <string name="gps_toggle_on">GPS On</string>
    <string name="gps_toggle_off">GPS Off</string>
    <string name="toggle_button_message_template" formatted="false">You turned the ToggleButton %s.Label is now \'%s\'.</string>
</resources>
