<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:andorid="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/buttons"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showButtonText"
            android:text="@string/hi_label" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showButtonText"
            android:text="@string/bye_label" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showButtonText"
            android:text="@string/yo_label" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showImageButton1Info"
            android:src="@drawable/android_platform" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showImageButton2Info"
            android:src="@drawable/camera_phone" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showImageButton3Info"
            android:src="@drawable/gps" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="6dp"
            android:onClick="showImageButton4Info"
            android:src="@drawable/button_android" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="24dp"
            android:onClick="showImageButton5Info"
            android:src="@drawable/button_dialog" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="24dp"
            android:onClick="showImageButton6Info"
            android:src="@drawable/button_rating_star" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showButtonText"
            android:text="@string/hi_label" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showButtonText"
            android:text="@string/bye_label" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showButtonText"
            android:text="@string/yo_label" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showButtonText"
            android:text="@string/hi_label" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showButtonText"
            android:text="@string/bye_label" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showButtonText"
            android:text="@string/yo_label" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="showToggleButtonInfo" />

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="showToggleButtonInfo"
                android:textOff="@string/ssl_toggle_off"
                android:textOn="@string/ssl_toggle_on" />

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="showToggleButtonInfo"
                android:textOff="@string/gps_toggle_off"
                android:textOn="@string/gps_toggle_on" />
            58
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
